@@ -1,3 +1,7 @@
+2007-03-28  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_fax3.c: "inline static" -> "static inline" for IRIC CC.
+
 2007-03-17  Joris Van Damme  <joris.at.lebbeke@skynet.be>
 
 	* start of BigTIFF upgrade - CVS HEAD unstable until further notice
